# trivAI

./: .gitignore  BACKEND_RUN_INSTRUCTIONS.md  FIXES_APPLIED.md  README.md  START_APP.md  package-lock.json  package.json  start-backend.sh
backend/: agent.py  chat.py  main.py  models.py  pyproject.toml  requirements.txt  rooms.py  start.sh
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/multiplayer/: page.disabled.tsx  page.tsx
frontend/components/: AIChatbot.tsx  Navigation.tsx
frontend/components/ui/: card.tsx
frontend/lib/: api.ts  tts.ts
